@@ -1,4 +1,7 @@
 iRedMail-0.8.6:
+    * Merge per-domain and per-user transport_maps MySQL lookup into one file:
+      - Removed: mysql/transport_maps_domain.cf, mysql/transport_maps_user.cf
+      - New: mysql/transport_maps.cf
     * Better support for installing iRedMail with remote MySQL server.
       Reference:
       http://www.iredmail.org/wiki/index.php?title=IRedMail/FAQ/MySQL/install.iredmail.with.remote.mysql.server
